--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.autofilterdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.autofilterdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.AutoFilterData:interface'
-    summary: <span data-ttu-id="637f1-101">描述通过调用返回的数据的接口`autoFilter.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="637f1-101">An interface describing the data returned by calling `autoFilter.toJSON()`</span></span><!-- --><span data-ttu-id="637f1-102">.</span><span class="sxs-lookup"><span data-stu-id="637f1-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`autoFilter.toJSON()`<!-- -->.
     name: Excel.Interfaces.AutoFilterData
     fullName: Excel.Interfaces.AutoFilterData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.AutoFilterData#isDataFiltered:member'
   - uid: 'excel!Excel.Interfaces.AutoFilterData#criteria:member'
     summary: |-
-      <span data-ttu-id="637f1-103">在自动筛选区域中保留所有筛选条件的数组。</span><span class="sxs-lookup"><span data-stu-id="637f1-103">An array that holds all the filter criteria in the autofiltered range.</span></span> <span data-ttu-id="637f1-104">只读。</span><span class="sxs-lookup"><span data-stu-id="637f1-104">Read-Only.</span></span>
+      在自动筛选区域中保留所有筛选条件的数组。
 
-      <span data-ttu-id="637f1-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="637f1-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
     fullName: criteria
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.AutoFilterData#criteria~0:complex'
   - uid: 'excel!Excel.Interfaces.AutoFilterData#enabled:member'
     summary: |-
-      <span data-ttu-id="637f1-106">指示是否启用了自动筛选。</span><span class="sxs-lookup"><span data-stu-id="637f1-106">Indicates if the AutoFilter is enabled or not.</span></span> <span data-ttu-id="637f1-107">只读。</span><span class="sxs-lookup"><span data-stu-id="637f1-107">Read-Only.</span></span>
+      指定是否启用自动筛选。
 
-      <span data-ttu-id="637f1-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="637f1-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
     fullName: enabled
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.AutoFilterData#isDataFiltered:member'
     summary: |-
-      <span data-ttu-id="637f1-109">指示自动筛选是否具有筛选条件。</span><span class="sxs-lookup"><span data-stu-id="637f1-109">Indicates if the AutoFilter has filter criteria.</span></span> <span data-ttu-id="637f1-110">只读。</span><span class="sxs-lookup"><span data-stu-id="637f1-110">Read-Only.</span></span>
+      指定自动筛选是否具有筛选条件。
 
-      <span data-ttu-id="637f1-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="637f1-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDataFiltered
     fullName: isDataFiltered
     langs:
