--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.tablecollection.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.tablecollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.TableCollection:class'
     summary: |-
-      <span data-ttu-id="afcb8-101">表示属于工作簿或工作表（具有取决于限定到的范围）的所有表的集合。</span><span class="sxs-lookup"><span data-stu-id="afcb8-101">Represents a collection of all the tables that are part of the workbook or worksheet, depending on how it was reached.</span></span>
+      表示属于工作簿或工作表（具有取决于限定到的范围）的所有表的集合。
 
-      <span data-ttu-id="afcb8-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TableCollection
     fullName: Excel.TableCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TableCollection#add:member(1)'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.TableCollection#toJSON:member(1)'
   - uid: 'excel!Excel.TableCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="afcb8-p101">新建表。范围对象或源地址决定了在哪个工作表下添加表。如果无法添加表（例如，由于地址无效，或者表与另一个表重叠），则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="afcb8-p101">Create a new table. The range object or source address determines the worksheet under which the table will be added. If the table cannot be added (e.g., because the address is invalid, or the table would overlap with another table), an error will be thrown.</span></span>
+      新建表。范围对象或源地址决定了在哪个工作表下添加表。如果无法添加表（例如，由于地址无效，或者表与另一个表重叠），则会引发错误。
 
-      <span data-ttu-id="afcb8-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'add(address, hasHeaders)'
     fullName: 'add(address, hasHeaders)'
     langs:
@@ -42,7 +42,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="afcb8-107">示例</span><span class="sxs-lookup"><span data-stu-id="afcb8-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -60,15 +60,15 @@ items:
           ```
       parameters:
         - id: address
-          description: '<span data-ttu-id="afcb8-108">Range 对象或表示数据源的区域的字符串地址或名称。</span><span class="sxs-lookup"><span data-stu-id="afcb8-108">A Range object, or a string address or name of the range representing the data source.</span></span> <span data-ttu-id="afcb8-109">如果地址不包含工作表名称，将使用当前活动的工作表。</span><span class="sxs-lookup"><span data-stu-id="afcb8-109">If the address does not contain a sheet name, the currently-active sheet is used.</span></span> <span data-ttu-id="afcb8-110">\[Api 集： ExcelApi 1.1/1.3。</span><span class="sxs-lookup"><span data-stu-id="afcb8-110">\[Api set: ExcelApi 1.1 / 1.3.</span></span> <span data-ttu-id="afcb8-111">在 ExcelApi 1.3 之前，此参数必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="afcb8-111">Prior to ExcelApi 1.3, this parameter must be a string.</span></span> <span data-ttu-id="afcb8-112">从 Excel Api 1.3 开始，此参数可以是一个 Range 对象或一个字符串。\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-112">Starting with Excel Api 1.3, this parameter may be a Range object or a string.\]</span></span>'
+          description: 'Range 对象或表示数据源的区域的字符串地址或名称。 如果地址不包含工作表名称，将使用当前活动的工作表。 \[Api 集： ExcelApi 1.1/1.3。 在 ExcelApi 1.3 之前，此参数必须是字符串。 从 Excel Api 1.3 开始，此参数可以是一个 Range 对象或一个字符串。\]'
           type:
             - 'excel!Excel.TableCollection#add~0:complex'
         - id: hasHeaders
-          description: '<span data-ttu-id="afcb8-p103">指示导入的数据是否具有列标签的布尔值。如果源不包含标头（即，当此属性设置为 false 时），Excel 将自动生成标头，数据将向下移动一行。</span><span class="sxs-lookup"><span data-stu-id="afcb8-p103">Boolean value that indicates whether the data being imported has column labels. If the source does not contain headers (i.e,. when this property set to false), Excel will automatically generate header shifting the data down by one row.</span></span>'
+          description: 指示导入的数据是否具有列标签的布尔值。如果源不包含标头（即，当此属性设置为 false 时），Excel 将自动生成标头，数据将向下移动一行。
           type:
             - boolean
   - uid: 'excel!Excel.TableCollection#context:member'
-    summary: <span data-ttu-id="afcb8-116">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="afcb8-116">The request context associated with the object.</span></span> <span data-ttu-id="afcb8-117">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="afcb8-117">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -81,9 +81,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TableCollection#count:member'
     summary: |-
-      <span data-ttu-id="afcb8-118">返回工作簿中的表数目。</span><span class="sxs-lookup"><span data-stu-id="afcb8-118">Returns the number of tables in the workbook.</span></span> <span data-ttu-id="afcb8-119">只读。</span><span class="sxs-lookup"><span data-stu-id="afcb8-119">Read-only.</span></span>
+      返回工作簿中的表数目。
 
-      <span data-ttu-id="afcb8-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.TableCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="afcb8-121">按名称或 ID 获取表。</span><span class="sxs-lookup"><span data-stu-id="afcb8-121">Gets a table by Name or ID.</span></span>
+      按名称或 ID 获取表。
 
-      <span data-ttu-id="afcb8-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -112,7 +112,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="afcb8-123">示例</span><span class="sxs-lookup"><span data-stu-id="afcb8-123">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -131,14 +131,14 @@ items:
           ```
       parameters:
         - id: key
-          description: <span data-ttu-id="afcb8-124">要检索的表的名称或 ID。</span><span class="sxs-lookup"><span data-stu-id="afcb8-124">Name or ID of the table to be retrieved.</span></span>
+          description: 要检索的表的名称或 ID。
           type:
             - string
   - uid: 'excel!Excel.TableCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="afcb8-125">根据其在集合中的位置获取表。</span><span class="sxs-lookup"><span data-stu-id="afcb8-125">Gets a table based on its position in the collection.</span></span>
+      根据其在集合中的位置获取表。
 
-      <span data-ttu-id="afcb8-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="afcb8-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -152,7 +152,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="afcb8-127">示例</span><span class="sxs-lookup"><span data-stu-id="afcb8-127">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -170,11 +170,11 @@ items:
           ```
       parameters:
         - id: index
-          description: <span data-ttu-id="afcb8-128">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="afcb8-128">Index value of the object to be retrieved.</span></span> <span data-ttu-id="afcb8-129">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="afcb8-129">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'excel!Excel.TableCollection#items:member'
-    summary: <span data-ttu-id="afcb8-130">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="afcb8-130">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -186,7 +186,7 @@ items:
         type:
           - 'excel!Excel.TableCollection#items~0:complex'
   - uid: 'excel!Excel.TableCollection#load:member(1)'
-    summary: <span data-ttu-id="afcb8-131">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="afcb8-131">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="afcb8-132">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="afcb8-132">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -200,11 +200,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="afcb8-133">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="afcb8-133">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.TableCollection#load~0:complex'
   - uid: 'excel!Excel.TableCollection#load:member(2)'
-    summary: <span data-ttu-id="afcb8-134">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="afcb8-134">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="afcb8-135">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="afcb8-135">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -218,7 +218,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="afcb8-136">示例</span><span class="sxs-lookup"><span data-stu-id="afcb8-136">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -255,11 +255,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="afcb8-137">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="afcb8-137">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.TableCollection#load:member(3)'
-    summary: <span data-ttu-id="afcb8-138">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="afcb8-138">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="afcb8-139">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="afcb8-139">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -273,11 +273,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="afcb8-140">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="afcb8-140">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.TableCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="afcb8-141">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="afcb8-141">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="afcb8-142">.</span><span class="sxs-lookup"><span data-stu-id="afcb8-142"></span></span> <span data-ttu-id="afcb8-143">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="afcb8-143"></span></span><!-- --><span data-ttu-id="afcb8-144">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableCollectionData`</span><span class="sxs-lookup"><span data-stu-id="afcb8-144">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.TableCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.TableCollectionData`</span></span><!-- --><span data-ttu-id="afcb8-145">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="afcb8-145">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -290,7 +290,7 @@ items:
           - 'excel!Excel.Interfaces.TableCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Table:class'
     name: Excel.Table
@@ -328,7 +328,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.TableCollectionData:interface'
     name: Excel.Interfaces.TableCollectionData
